--- a/website/stylesheet.css
+++ b/website/stylesheet.css
@@ -28,7 +28,9 @@ body {
 
 html {
   width: 100%;
-  height: 100%;
+  height: auto;
+  margin: auto;
+  padding: auto;
 }
 
 .page {
@@ -36,7 +38,7 @@ html {
   box-shadow: 0px 0px 15px rgba(0,0,0,0.2);
 
   max-width: 900px;
-  margin: 10% auto 5% auto;
+  margin: 200px auto 100px auto;
   /* height: 85%; */
 }
 
@@ -46,7 +48,7 @@ html {
 }
 
 #main img{
-  margin-top: 300px;
+  margin: 300px 0 200px 0;
   width: 40%;
 }
 
